<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_movie"
        android:icon="@drawable/ic_local_movies_black"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/action_tv"
        android:icon="@drawable/ic_live_tv_black"
        android:title="@string/title_tv" />

</menu>