...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:transitionName="titletv"
                        android:id="@+id/tvTitleTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title"
                        android:textSize="20sp"
                        android:textStyle="bold" />

...
